--- a/produits/templates/produits/accueil.html
+++ b/produits/templates/produits/accueil.html
@@ -66,7 +66,7 @@
     <div class="row">
         {% for famille in familles %}
         <div class="col-md-4 mb-4">
-            <div class="product-card fade-in animate-on-load">
+            <div class="category-card">
                 {% if famille.image %}
                 <img src="{{ famille.image.url }}" class="card-img-top" alt="{{ famille.nom }}">
                 {% else %}
