--- a/produits/templates/produits/accueil.html
+++ b/produits/templates/produits/accueil.html
@@ -138,7 +138,8 @@
                 </div>
                 <div class="card-body p-4">
                     <h5 class="card-title mb-3">{{ famille.famille }}</h5>
-                    <p class="card-text text-muted mb-4">{{ famille.description|truncatewords:25 }}</p>
+                   <p class="card-text text-muted mb-4">{{ famille.description|truncatewords:25|safe }}</p>
+
                     <div class="d-flex justify-content-between align-items-center">
                         <a href="{% url 'produits:liste_produits' famille.id %}" class="btn btn-primary btn-sm">Voir les produits</a>
                         <span class="badge bg-success">{{ famille.nombre_produits }} produits</span>
