--- a/produits/templates/produits/base.html
+++ b/produits/templates/produits/base.html
@@ -88,9 +88,9 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-transparent shadow-lg">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="/">Boutique</a>
+            <a class="navbar-brand fw-bold" href="/">Solav+</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
