--- a/sherly_app/templates/produits/edit_product.html
+++ b/sherly_app/templates/produits/edit_product.html
@@ -11,7 +11,7 @@
                     <h2 class="mb-0">MODIFICATION DE {{product.designation}} </h2>
                 </div>
                 <div class="card-body">
-                    <form method="post">
+                    <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
 
                                                 <div class="form-group">
@@ -55,6 +55,15 @@
                                     <input type="checkbox" class="form-control" id="is_active" name="is_active" {% if product.is_active %}checked{% endif %}>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="image">Image du produit</label>
+                            <input type="file" class="form-control-file" id="image" name="image">
+                            {% if product.image %}
+                                <p class="mt-2">Image actuelle :</p>
+                                <img src="{{ product.image.url }}" alt="Image actuelle" style="max-width: 200px;">
+                            {% endif %}
                         </div>
 
 
