--- a/produits/templates/produits/base.html
+++ b/produits/templates/produits/base.html
@@ -90,7 +90,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-transparent shadow-lg">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="/">Solav+</a>
+            <a class="navbar-brand fw-bold" href="/">SOLVA+</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
